/request-courses and /request pages added

--- a/src/components/FooterPage/FooterPage.scss
+++ b/src/components/FooterPage/FooterPage.scss
@@ -2,10 +2,10 @@
     background-color: #F2F3F7;
 
     //remove fixed positioning later
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    left: 0;
+    // position: fixed;
+    // bottom: 0;
+    // right: 0;
+    // left: 0;
 }   
 
 .page-footer{
