--- a/src/components/RequestPage/RequestPage.scss
+++ b/src/components/RequestPage/RequestPage.scss
@@ -6,6 +6,7 @@
     &__title{
         font-size: 32px;
         line-height: 36px;
+        padding-left: 5%;
 
         display: flex;
         align-items: center;
