--- a/src/components/Request/Request.scss
+++ b/src/components/Request/Request.scss
@@ -13,7 +13,7 @@
     &__button{
         background: #E30611 !important;
         border-radius: 8px !important;
-        width: 150px;
+        // width: 150px;
         height: 50px !important;
     }
 
